--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,23 @@
 body {
-	background-color: #CCD;
+	background-color: #d1d1fd;
     color: #000;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
+    margin-bottom: 0;
+}
+
+.lyrics {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    text-align: center;
+    white-space: pre;
 }
